translation-tool/inputs/source_meta/objects/Payu_Credit_Card__mdt.object
<CustomObject>
    <fields>
        <fullName>CVV_Image_Path__c</fullName>
        <label>CVV Image Path</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CVV_Length__c</fullName>
        <label>CVV Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CVV_Max_Height_CSS__c</fullName>
        <label>CVV Max Height CSS</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>2</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_Years__c</fullName>
        <defaultValue>20</defaultValue>
        <label>Expiration Date Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Regex__c</fullName>
        <label>Regex</label>
        <type>TextArea</type>
    </fields>
    <label>Payu Credit Card</label>
    <pluralLabel>Payu Credit Cards</pluralLabel>
</CustomObject>